# EDGE-classic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  branding.cfg
.github/workflows/: cmake-release.yml  cmake.yml
cmake/: GenerateAppImage.cmake
edge_defs/scripts/: coal_api.ec
libraries/: CMakeLists.txt
libraries/libcRSID/: libcRSID.h
libraries/m4p/: m4p.h
libraries/miniaudio/: CMakeLists.txt
libraries/minilua/: CMakeLists.txt
libraries/pl_mpeg/: CMakeLists.txt  pl_mpeg.h
libraries/tracy/: CMakeLists.txt  edge_profiling.h  tracy-csvexport.AppImage
source_files/: CMakeLists.txt
source_files/ajbsp/: CMakeLists.txt  bsp.h  bsp_misc.cc  bsp_node.cc  bsp_utility.cc
source_files/coal/: CMakeLists.txt  c_compile.cc  c_execute.cc
source_files/ddf/: CMakeLists.txt  ddf_attack.cc  ddf_image.cc  ddf_image.h  ddf_line.cc  ddf_main.cc  ddf_main.h  ddf_sector.cc  ddf_thing.cc  ddf_types.h  ddf_weapon.cc
source_files/dehacked/: deh_frames.cc  deh_rscript.cc  deh_things.cc  deh_weapons.cc
source_files/edge/: CMakeLists.txt  am_map.cc  bot_nav.cc  bot_think.cc  bsp.cc  bsp.h  con_con.cc  dm_defs.h  e_main.cc  f_finale.cc  f_interm.cc  hu_draw.cc  i_movie.cc  i_system.cc  i_system.h  i_video.cc  m_argv.cc  m_argv.h  m_menu.cc  m_random.cc  m_random.h  n_network.cc  p_action.cc  p_action.h  p_blockmap.cc  p_enemy.cc  p_forces.cc  p_inter.cc  p_map.cc  p_maputl.cc  p_mobj.cc  p_mobj.h  p_plane.cc  p_setup.cc  p_sight.cc  p_spec.cc  p_spec.h  p_telept.cc  p_tick.cc  p_user.cc  (+36 more)
source_files/epi/: CMakeLists.txt  epi.cc  epi_filesystem.cc  epi_math.h  epi_simd.h  (+4 more)
(+19 files in other folders)
